--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@
 
 # Executables
 *.exe
-#**/*.exe
+
 
 *.out
 *.app
@@ -52,5 +52,5 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-#**/build/
+build/
 Домашнее задание.docx
