Переименовал temp_api в climate_data

--- a/FinalWork/Makefile
+++ b/FinalWork/Makefile
@@ -3,8 +3,8 @@ CC = gcc
 CFLAGS = -g -Wall -Wextra -std=c99 -O2
 
 TARGET = Temperature_Statistics
-SOURCES = main.c temp_api.c readFileToBuffer.c
-HEADERS = temp_api.h readFileToBuffer.h
+SOURCES = main.c climate_data.c readFileToBuffer.c
+HEADERS = climate_data.h readFileToBuffer.h
 
 all: $(TARGET)
 
