--- a/FinalWork/Makefile
+++ b/FinalWork/Makefile
@@ -1,6 +1,5 @@
-
 CC = gcc
-CFLAGS = -g -Wall -Wextra -std=c99 -O2
+CFLAGS = -g -Wall -Wextra -std=gnu99 -O2  
 
 TARGET = Temperature_Statistics
 SOURCES = main.c climate_data.c readFileToBuffer.c
@@ -9,7 +8,7 @@ HEADERS = climate_data.h readFileToBuffer.h
 all: $(TARGET)
 
 $(TARGET): $(SOURCES) $(HEADERS)
-	$(CC) $(CFLAGS) -o $@ $(SOURCES)
+	$(CC) $(CFLAGS) -o $@ $(SOURCES) 
 
 clean:
 	rm -f $(TARGET)
