--- a/FinalWork/Makefile
+++ b/FinalWork/Makefile
@@ -1,17 +1,21 @@
-
 CC = gcc
-CFLAGS = -g -Wall -Wextra -std=c99 -O2
+CFLAGS = -g -Wall -Wextra -std=gnu99 -O2  
 
 TARGET = Temperature_Statistics
-SOURCES = main.c climate_data.c readFileToBuffer.c
-HEADERS = climate_data.h readFileToBuffer.h
+SOURCES = main.c \
+		  climate_data.c \
+		  readFileToBuffer.c
+HEADERS = climate_data.h \
+		  readFileToBuffer.h
 
 all: $(TARGET)
 
 $(TARGET): $(SOURCES) $(HEADERS)
-	$(CC) $(CFLAGS) -o $@ $(SOURCES)
+	$(CC) $(CFLAGS) -o $@ $(SOURCES) 
 
 clean:
-	rm -f $(TARGET)
+	rm -f $(TARGET) *.o
 
 .PHONY: all clean
+
+rebuild: clean all
